--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,12 @@ li {
 li:last-child {
     border-bottom: none;
 }
+
+a {
+    text-decoration: none;
+    color: #007bff;
+}
+
+a:hover {
+    text-decoration: underline;
+}
